made it to were we styled the home page

--- a/BananaTrifle.html
+++ b/BananaTrifle.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Recipes</title>
+    <link rel = "bananatriflesheet" href="bananatrifle.css">
   </head>
   <body>
     <h1><Strong>Banana Trifle!</Strong></h1>
     <a href="index.html">Home</a>
+    
     <p>   </p>
     <img src = "img/Easy Layered Banana Pudding Trifle.jpg">
-    <p>Banana trifle is basically just fancy banana pudding 
+    <p class = "recipe">Banana trifle is basically just fancy banana pudding 
         idk white people probably made it. hfdjklsdajklsfjkd
         sfdjkljjkfdjkfdjklsfdjkjkdjjfdjkdklasjdfkljaeiwouei
         jdasmcxcgtyeuwiojkjjh4uqpoiwuerqwtuyqpoiujcm4738hfs
     </p>
-    <ul>
+    <ul class = "lmao">
        <li>1 quart cold milk</li>
        <li>2 packages instant banana pudding mix</li>
        <li>2 bananas chopped</li>
@@ -25,7 +27,7 @@
        <li>12 ounce box vanilla wafers crushed</li>
   
     </ul>
-    <ol>
+    <ol class = "hehe">
       <li>whisk milk and pudding mix together</li>
       <li>beat cream and sugar and vanilla</li>
       <li> put the cake cubes, then pudding, then whipped cream
