--- a/index.html
+++ b/index.html
@@ -3,10 +3,33 @@
   <head>
     <meta charset="UTF-8">
     <title>Me Recipia </title>
+     <link rel = "stylesheet" href="style.css">
   </head>
   <body>
+    <div class = "container">
     <h1><strong>Plagiarized From AllRecipes and Taste of Home</strong></h1>
-    <a href = "Tiramisu.html">Tiramisu</a>
-    <a href = "BananaTrifle.html"> Banana Trifle</a>
-    <a href = "ChcolateMousse.html"> Chocolate Mousse</a>
+   
+
+    <div>
+    <a href = "Tiramisu.html">
+      <button class = "tiramisu"> Tiramisu </button>
+    </a>
+    </div>
+
+
+   <div>
+    <a href = "BananaTrifle.html"> 
+      <button class = "bananatrifle"> Banana Trifle</button>
+    </a>
+    </div>
+ 
+
+    <div>
+    <a href = "ChcolateMousse.html"> 
+      <button class = "chocolatemousse"> Chocolate Mousse </button>
+    </a>
+    </div>
+
+    <img src = "img/goofy ahh rat.jpg">
+ </div>
   </body>
