last commit so I can work on it hopefullyat home

--- a/BananaTrifle.html
+++ b/BananaTrifle.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Recipes</title>
-    <link rel = "bananatriflesheet" href="bananatrifle.css">
+    <link rel = "stylesheet" href="style.css">
   </head>
   <body>
     <h1><Strong>Banana Trifle!</Strong></h1>
@@ -16,7 +16,8 @@
         sfdjkljjkfdjkfdjklsfdjkjkdjjfdjkdklasjdfkljaeiwouei
         jdasmcxcgtyeuwiojkjjh4uqpoiwuerqwtuyqpoiujcm4738hfs
     </p>
-    <ul class = "lmao">
+    <div class = "lmao">
+    <ul>
        <li>1 quart cold milk</li>
        <li>2 packages instant banana pudding mix</li>
        <li>2 bananas chopped</li>
@@ -25,9 +26,9 @@
        <li>4 teaspons vanilla extract</li>
        <li>1 package prepard pound cake cubed</li>
        <li>12 ounce box vanilla wafers crushed</li>
-  
     </ul>
-    <ol class = "hehe">
+    </div>
+    <ol>
       <li>whisk milk and pudding mix together</li>
       <li>beat cream and sugar and vanilla</li>
       <li> put the cake cubes, then pudding, then whipped cream
