updated all the chain code

--- a/BananaTrifle.html
+++ b/BananaTrifle.html
@@ -16,6 +16,7 @@
         sfdjkljjkfdjkfdjklsfdjkjkdjjfdjkdklasjdfkljaeiwouei
         jdasmcxcgtyeuwiojkjjh4uqpoiwuerqwtuyqpoiujcm4738hfs
     </p>
+
     <div class = "lmao">
     <ul>
        <li>1 quart cold milk</li>
@@ -28,12 +29,15 @@
        <li>12 ounce box vanilla wafers crushed</li>
     </ul>
     </div>
+    
+    <div class = "hehe">
     <ol>
       <li>whisk milk and pudding mix together</li>
       <li>beat cream and sugar and vanilla</li>
       <li> put the cake cubes, then pudding, then whipped cream
         then crushed wafers on top in a trifle bowl (idk what that is)
       </li>
+      </div>
     
     </ol>
   </body>
