--- a/ChcolateMousse.html
+++ b/ChcolateMousse.html
@@ -14,6 +14,7 @@
         auiewyuerouiqwudncjzxbcvbasdfgwyequoqa
         weyruqweryioqwteruiyqwueyruihdjfhjbdcb
     </p>
+    <div class = "chocolate hehe">
     <ul>
        <li>1/4 semi sweat chocolate chips</li>
        <li>1 tbs water</li>
@@ -23,6 +24,9 @@
        <li> 1 tbs sugar</li>
 
     </ul>
+    </div>
+
+    <div class = "chocolate mousse">
     <ol>
       <li>melt chocolate with water untill smooth</li>
       <li>stir chocolate mixture into egg yolk</li>
@@ -32,5 +36,6 @@
       <li>add sugar and keep beating</li>
       <li> refrigerate for two hours and done!</li>
     </ol>
+    </div>
   </body>
   
