--- a/Tiramisu.html
+++ b/Tiramisu.html
@@ -14,6 +14,8 @@
       jkajsdlfjhewiuahsdjkfjlaskdfjasjdfla 
       aksjdlkjal;skjdfljaskld;jflkasjdf.
     </p>
+    <div class = "ancestor"> 
+      <div class = "contents">
     <ul>
        <li>6 large eggs</li>
        <li>3/4 large egg yolks</li>
@@ -26,6 +28,8 @@
        <li>3 ounce package ladyfingers</li>
        <li>1 tablespoon unsweetened cocoa powder</li>
     </ul>
+    </div>
+    </div>
     <ol>
       <li>whisk egg yolks and sugar together</li>
       <li>add in milk</li>
